# huamei-invoice

./: main.py  pyproject.toml  📱安装APK说明.txt
.github/workflows/: build-apk.yml
src/huamei_app/: __main__.py  pyproject.toml
