[build-system]
requires = ["briefcase~=0.3"]
build-backend = "briefcase.integrations.tempfile.tempfile_based_formatter"

[project]
bundle = "com.youyan"
app_name = "huamei_app"
formal_name = "华美物流发货单"
license = "MIT"
icon = "src/huamei_app/resources/huamei"
description = "华美物流发货单生成工具"
version = "1.0.0"

[tool.briefcase.app.huamei_app]
formal_name = "华美物流发货单"
sources = ["src/huamei_app"]
requires = ["openpyxl>=0.108"]
