[build-system]
requires = ["briefcase~=0.3"]
build-backend = "briefcase.integrations.tempfile.tempfile_based_formatter"

[project]
name = "huamei-invoice"
version = "1.0.0"
description = "华美物流发货单生成工具"
license = {text = "MIT"}

[tool.briefcase]
project_name = "huamei_invoice"
bundle = "com.youyan"
organization_name = "有研"
description = "华美物流发货单生成工具"

[tool.briefcase.app.huamei_app]
formal_name = "华美物流发货单"
sources = ["src/huamei_app"]
requires = ["openpyxl>=0.108"]
